; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qed/extr_qed_sriov.c_qed_iov_enable_vf_traffic.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qed/extr_qed_sriov.c_qed_iov_enable_vf_traffic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qed_hwfn = type { i32 }
%struct.qed_ptt = type { i32 }
%struct.qed_vf_info = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.qed_hwfn*, %struct.qed_ptt*, %struct.qed_vf_info*)* @qed_iov_enable_vf_traffic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @qed_iov_enable_vf_traffic(%struct.qed_hwfn* %0, %struct.qed_ptt* %1, %struct.qed_vf_info* %2) #0 {
  %4 = alloca %struct.qed_hwfn*, align 8
  %5 = alloca %struct.qed_ptt*, align 8
  %6 = alloca %struct.qed_vf_info*, align 8
  store %struct.qed_hwfn* %0, %struct.qed_hwfn** %4, align 8
  store %struct.qed_ptt* %1, %struct.qed_ptt** %5, align 8
  store %struct.qed_vf_info* %2, %struct.qed_vf_info** %6, align 8
  %7 = load %struct.qed_hwfn*, %struct.qed_hwfn** %4, align 8
  %8 = load %struct.qed_ptt*, %struct.qed_ptt** %5, align 8
  %9 = load %struct.qed_vf_info*, %struct.qed_vf_info** %6, align 8
  %10 = call i32 @qed_iov_vf_igu_reset(%struct.qed_hwfn* %7, %struct.qed_ptt* %8, %struct.qed_vf_info* %9)
  %11 = load %struct.qed_hwfn*, %struct.qed_hwfn** %4, align 8
  %12 = load %struct.qed_ptt*, %struct.qed_ptt** %5, align 8
  %13 = load %struct.qed_vf_info*, %struct.qed_vf_info** %6, align 8
  %14 = call i32 @qed_iov_vf_igu_set_int(%struct.qed_hwfn* %11, %struct.qed_ptt* %12, %struct.qed_vf_info* %13, i32 1)
  %15 = load %struct.qed_hwfn*, %struct.qed_hwfn** %4, align 8
  %16 = load %struct.qed_ptt*, %struct.qed_ptt** %5, align 8
  %17 = load %struct.qed_vf_info*, %struct.qed_vf_info** %6, align 8
  %18 = call i32 @qed_iov_config_perm_table(%struct.qed_hwfn* %15, %struct.qed_ptt* %16, %struct.qed_vf_info* %17, i32 1)
  ret void
}

declare dso_local i32 @qed_iov_vf_igu_reset(%struct.qed_hwfn*, %struct.qed_ptt*, %struct.qed_vf_info*) #1

declare dso_local i32 @qed_iov_vf_igu_set_int(%struct.qed_hwfn*, %struct.qed_ptt*, %struct.qed_vf_info*, i32) #1

declare dso_local i32 @qed_iov_config_perm_table(%struct.qed_hwfn*, %struct.qed_ptt*, %struct.qed_vf_info*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
